# doc-pre-commit

./: .pre-commit-hooks.yaml  README.md  check_filetype.py  setup.cfg  setup.py
doc_pre_commit/: generate_docstring.py  generate_docstring_pipeline.sh
