[metadata]
name = doc_pre_commit
version = 1.0.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alemastro97/doc-pre-commit
author = Alessandro Mastropasqua
author_email = aleilmastro@gmail.com
license = MIT
license_files = LICENSE

[options.entry_points]
console_scripts =
    check-filetype = doc_pre_commit.check_filetype:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true