[metadata]
name = doc_pre_commit
version = 1.0.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alemastro97/doc-pre-commit
author = Alessandro Mastropasqua
author_email = 
license = MIT
license_files = LICENSE

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    generate-docstring = doc_pre_commit.generate_docstring:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
